--- a/index.html
+++ b/index.html
@@ -1,136 +1,155 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudo de Caso: Prova Automática de Teoremas</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Estudo de Caso: Prova Automática de Teoremas</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <header>
-        <h1>ESTUDO DE CASO: PROVA AUTOMÁTICA DE TEOREMAS</h1>
-        <h2>LÓGICA PARA COMPUTAÇÃO</h2>
-    </header>
+  <header>
+    <h1>Estudo de Caso: Prova Automática de Teoremas</h1>
+    <h2>Lógica para Computação</h2>
+  </header>
 
-    <section id="apresentadores">
-        <h3>Apresentadores</h3>
-        <p>Rômulo Braun, Leonardo Molina, Gustavo Leandro, Gustavo Lopes.</p>
-        <p>Professora: WILCILENE MARIA KOWAL</p>
+  <section id="apresentadores">
+    <h3>Apresentadores</h3>
+    <p>Rômulo Braun, Leonardo Molina, Gustavo Leandro, Gustavo Lopes.</p>
+    <p>Professora: Wilcilene Maria Kowal</p>
+  </section>
+
+  <nav id="sumario">
+    <h3>Sumário</h3>
+    <ul>
+      <li><a href="#motivacao-objetivo">1. Motivação e Objetivo</a></li>
+      <li><a href="#resolucao">2. Resolução</a></li>
+      <li><a href="#prover9-igualdade">3. Prover9 & Igualdade</a></li>
+      <li><a href="#saida">4. O que a saída mostrou</a></li>
+      <li><a href="#como-ler">5. Como ler</a></li>
+      <li><a href="#aplicacao-real">6. Aplicação real</a></li>
+      <li><a href="#conclusao">7. Conclusão</a></li>
+      <li><a href="#fontes">8. Fontes</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="motivacao-objetivo">
+      <h2>1. Motivação e Objetivo</h2>
+      <h3>Motivação</h3>
+      <ul>
+        <li>Testes ≠ prova de correção</li>
+        <li>Provas formais reduzem incidentes críticos</li>
+        <li>Pode ser integrado em pipelines de CI/CD</li>
+      </ul>
+      <p class="objetivo">
+        Objetivo principal: provar a distributividade em Álgebra Booleana.
+      </p>
     </section>
 
-    <nav id="sumario">
-        <h3>Sumário</h3>
+    <section id="resolucao">
+      <h2>2. Resolução</h2>
+      <ul>
+        <li>Trabalha em FNC (Forma Normal Conjuntiva)</li>
+        <li>Regra: de (A ∨ X) e (¬A ∨ Y) ⇒ (X ∨ Y)</li>
+        <li>Prova por refutação: negar o objetivo e buscar ⊥ (cláusula vazia / F)</li>
+      </ul>
+    </section>
+
+    <section id="prover9-igualdade">
+      <h2>3. Prover9 & Igualdade</h2>
+      <ul>
+        <li>Para igualdade, usa paramodulação (substitui iguais por iguais)</li>
+        <li>Mistura resolução, reescrita (rewrite) e paramodulação</li>
+        <li>Etiquetas ajudam a localizar o objetivo e o resultado</li>
+      </ul>
+    </section>
+
+    <section id="saida">
+      <h2>4. O que a saída mostrou</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Métrica</th>
+            <th>Valor</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Tempo</td>
+            <td>~0,78 s (+0,19 s)</td>
+          </tr>
+          <tr>
+            <td>Tamanho da prova</td>
+            <td>141 passos</td>
+          </tr>
+          <tr>
+            <td>Nível (profundidade)</td>
+            <td>46</td>
+          </tr>
+          <tr>
+            <td>Given clauses</td>
+            <td>299</td>
+          </tr>
+        </tbody>
+      </table>
+      <p>
+        Fechamento: ... F → answer(Distributivity) ⇒ Teorema provado.
+      </p>
+    </section>
+
+    <section id="como-ler">
+    <h2>5. Como ler</h2>
+    <p>
+    A saída do Prover9 é uma sequência numerada de passos (passos de prova)
+    que demonstram como a cláusula vazia (⊥ ou F) foi alcançada a partir da negação
+    do teorema e dos axiomas fornecidos. Abaixo estão os principais elementos:
+    </p>
+
+    <div class="como-ler-box">
         <ul>
-            <li><a href="#motivacao-objetivo">1. Motivação e Objetivo</a></li>
-            <li><a href="#resolucao">2. Resolução</a></li>
-            <li><a href="#prover9-igualdade">3. Prover9 & Igualdade</a></li>
-            <li><a href="#saida">4. O que a saída mostrou</a></li>
-            <li><a href="#como-ler">5. Como ler</a></li>
-            <li><a href="#aplicacao-real">6. Aplicação real</a></li>
-            <li><a href="#conclusao">7. Conclusão</a></li>
-            <li><a href="#fontes">8. Fontes</a></li>
+            <li><code>goal</code> / <code>label(Distributivity)</code>: objetivo marcado</li>
+            <li><code>deny(1)</code>: negação do objetivo (refutação)</li>
+            <li><code>para(...)</code>: <strong>paramodulação</strong> (raciocínio com =)</li>
+            <li><code>rewrite(...)</code> / <code>back_rewrite(...)</code>: simplificações por =</li>
+            <li><code>resolve(...)</code>: passo de resolução</li>
+            <li><code>new_symbol(c_0)</code>: constante auxiliar (ex.: <code>x ∨ x'</code>)</li>
+            <li><code>$F</code> / <code>answer(...)</code>: achou contradição ⇒ objetivo verdadeiro</li>
         </ul>
-    </nav>
+    </div>
+    </section>
 
-    <main>
-        <section id="motivacao-objetivo">
-            <h2>1. Motivação e Objetivo</h2>
-            <h3>Motivação</h3>
-            <ul>
-                <li>Testes ≠ prova de correção</li>
-                <li>Provas formais reduzem incidentes críticos</li>
-                <li>Dá para integrar em CI/CD</li>
-            </ul>
-            <p class="objetivo">Objetivo principal: PROVAR A DISTRIBUTIVIDADE EM ÁLGEBRA BOOLEANA</p>
-        </section>
+    <section id="aplicacao-real">
+      <h2>6. Aplicação Real</h2>
+      <ul>
+        <li><strong>Auditoria de firewall/ACL:</strong> provar que “/admin externo nunca é permitido”.</li>
+        <li>Modela regras como fórmulas; nega a propriedade e busca a contradição (⊥).</li>
+        <li>Se provar, significa que não existe rota que viole a política.</li>
+      </ul>
+    </section>
 
-        <section id="resolucao">
-            <h2>2. Resolução</h2>
-            <ul>
-                <li>Trabalha em FNC (CNF)</li>
-                <li>Regra: de (A ∨ X) e (¬A ∨ Y) ⇒ (X ∨ Y)</li>
-                <li>Prova por refutação: negar o objetivo e buscar ⊥ (cláusula vazia / $F)</li>
-            </ul>
-        </section>
+    <section id="conclusao">
+      <h2>7. Conclusão</h2>
+      <ul>
+        <li>Prover9 demonstra leis algébricas automaticamente.</li>
+        <li>A saída é legível o suficiente para apresentar o objetivo, passos-chave e fechamento (F).</li>
+        <li>Próximos passos: integrar em pipelines e checar políticas reais.</li>
+      </ul>
+    </section>
 
-        <section id="prover9-igualdade">
-            <h2>3. Prover9 & Igualdade</h2>
-            <ul>
-                <li>Para igualdade, usa paramodulação (substitui iguais por iguais)</li>
-                <li>Mistura: resolução + (back)rewrite + para(...)</li>
-                <li>Etiquetas ajudam a localizar o objetivo/resultado</li>
-            </ul>
-        </section>
+    <section id="fontes">
+      <h2>8. Fontes</h2>
+      <ul>
+        <li><a href="https://en.wikipedia.org/wiki/Prover9" target="_blank">Wikipedia - Prover9</a></li>
+        <li><a href="https://www.cs.unm.edu/~mccune/prover9/gui/v05.html" target="_blank">Prover9 GUI</a></li>
+        <li><a href="https://www.youtube.com/watch?v=TzG1yDYBBfE" target="_blank">YouTube - Vídeo explicativo</a></li>
+      </ul>
+    </section>
+  </main>
 
-        <section id="saida">
-            <h2>4. O que a saída mostrou</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Métrica</th>
-                        <th>Valor</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Tempo</td>
-                        <td>~0,78 s (+0,19 s)</td>
-                    </tr>
-                    <tr>
-                        <td>Tamanho da prova</td>
-                        <td>141 passos</td>
-                    </tr>
-                    <tr>
-                        <td>Nível (profundidade)</td>
-                        <td>46</td>
-                    </tr>
-                    <tr>
-                        <td>Given clauses</td>
-                        <td>299</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p>Fechamento: ... $F # answer(Distributivity) ⇒ Teorema provado</p>
-        </section>
-
-        <section id="como-ler">
-            <h2>5. Como ler</h2>
-            <p>*(O conteúdo detalhado de "Como ler" seria inserido aqui.)*</p>
-        </section>
-
-        <section id="aplicacao-real">
-            <h2>6. Aplicação Real</h2>
-            <ul>
-                <li>**Auditoria de firewall/ACL:** provar que “/admin externo nunca é permitido”</li>
-                <li>Modela regras como fórmulas; nega a propriedade e pede ⊥</li>
-                <li>Se provar, não existe rota que viole a política</li>
-            </ul>
-        </section>
-
-        <section id="conclusao">
-            <h2>7. Conclusão</h2>
-            <ul>
-                <li>Prover9 demonstra leis algébricas automaticamente</li>
-                <li>A saída é legível o suficiente para apresentar: objetivo, passos-chave, $F</li>
-                <li>Próximos passos: integrar em pipeline e checar políticas reais</li>
-            </ul>
-        </section>
-
-        <section id="fontes">
-            <h2>8. Fontes</h2>
-            <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Prover9" target="_blank">Wikipedia - Prover9</a></li>
-                <li><a href="https://www.youtube.com/watch?v=TzG1yDYBBfE" target="_blank">YouTube - Vídeo (URL incompleta)</a></li>
-                <li><a href="https://www.cs.unm.edu/~mccune/prover9/gui/v05.html" target="_blank">Prover9 GUI</a></li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>Página gerada com base no Estudo de Caso de Lógica para Computação.</p>
-    </footer>
+  <footer>
+    <p>Página gerada com base no Estudo de Caso de Lógica para Computação.</p>
+  </footer>
 
 </body>
-
 </html>
