Fix HTML formatting and add Prover9 interface image

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 
     <section id="prover9-igualdade">
       <h2>3. Prover9 & Igualdade</h2>
+      <p>Abaixo, é possível ver a interface do Prover9, onde são inseridas as suposições (Assumptions) e o objetivo (Goals) para a prova da distributividade.</p>
+      <div class="image-container">
+        <img src="https://i.ibb.co/q187qM6/prover9-gui.png" alt="Interface do Prover9 com suposições e objetivo">
+      </div>
       <ul>
         <li>Para igualdade, usa paramodulação (substitui iguais por iguais)</li>
         <li>Mistura resolução, reescrita (rewrite) e paramodulação</li>
