Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <ul>
             <li><code>goal</code> / <code>label(Distributivity)</code>: objetivo marcado</li>
             <li><code>deny(1)</code>: negação do objetivo (refutação)</li>
-            <li><code>para(...)</code>: <strong>paramodulação</strong> (raciocínio com =)</li>
+            <li><code>para(...)</code>: <code>paramodulação</code> (raciocínio com =)</li>
             <li><code>rewrite(...)</code> / <code>back_rewrite(...)</code>: simplificações por =</li>
             <li><code>resolve(...)</code>: passo de resolução</li>
             <li><code>new_symbol(c_0)</code>: constante auxiliar (ex.: <code>x ∨ x'</code>)</li>
@@ -157,6 +157,7 @@
 
 </body>
 </html>
+
 
 
 
