--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <section id="apresentadores">
     <h3>Apresentadores</h3>
-    <p>Rômulo Braun, Leonardo Molina, Gustavo Leandro, Gustavo Lopes.</p>
+    <p>Gustavo Leandro, Gustavo Lopes, Leonardo Molina e Rômulo Braun.</p>
     <p>Professora: Wilcilene Maria Kowal</p>
   </section>
 
@@ -157,6 +157,7 @@
 
 </body>
 </html>
+
 
 
 
